pom build