@@ -14,6 +14,34 @@
   <dependencies>
     <dependency>
       <groupId>org.cloudlet.web</groupId>
+      <artifactId>org.cloudlet.web.boot</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.cloudlet.web</groupId>
+      <artifactId>org.cloudlet.web.logging</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.cloudlet.web</groupId>
+      <artifactId>org.cloudlet.web.core</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <classifier>client</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.cloudlet.web</groupId>
+      <artifactId>org.cloudlet.web.core</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <classifier>sources</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.cloudlet.web</groupId>
       <artifactId>org.cloudlet.web.core</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
@@ -34,6 +62,10 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-dev</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
@@ -62,7 +94,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>org.glassfish.jersey.examples.helloworld.webapp.App</mainClass>
+          <mainClass>org.cloudlet.web.core.server.CoreResourceConfig</mainClass>
         </configuration>
       </plugin>
       <plugin>
@@ -84,6 +116,17 @@
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>gwt-maven-plugin</artifactId>
+        <configuration>
+          <extraJvmArgs>-Xmx2048M -XX:MaxPermSize=512M -Xss4M</extraJvmArgs>
+          <extraParam>true</extraParam>
+          <modules>
+            <module>org.cloudlet.web.app.Platform</module>
+          </modules>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>net.kindleit</groupId>
